<resources>
    <string name="app_name">Gibson_Final_Project</string>
    <string name="welcomeMessage">Welcome to the Concert Caravan!</string>
    <string name="intro">Your premium ticket destination</string>
    <string name="contact">Contact Us:  </string>
    <string name="number">1-800-BUY-TIXS</string>
    <string name="link">Or</string>
    <string name="clickHere">Click HERE to purchase tickets!</string>
    <string name="venue">Choose a Venue</string>
    <string name="concertMessage">Pick one of the following bands picture to begin your adventure!</string>
    <string name="artist">Artist:</string>
    <string name="date">Tour Dates:</string>
    <string name="cost">Ticket Price:</string>
    <string name="post">Post Malone</string>
    <string name="maroon">Maroon 5</string>
    <string name="sabaton">Sabaton</string>
    <string name="power">Powerwolf</string>
    <string name="may">5/1 - 5/31</string>
    <string name="june">6/1 - 6/30</string>
    <string name="july">7/1 - 7/31</string>
    <string name="september">9/1 - 9/30</string>
    <string name="price1">$120</string>
    <string name="price2">$150</string>
    <string name="price3">$125</string>
    <string name="price4">$170</string>
    <string name="infoWelcome">Enter Your Info</string>
    <string name="infoMessage">Please enter your info below to purchase a ticket</string>
    <string name="name">Name (First and Last):</string>
    <string name="dateChoice">Desired Date:</string>
    <string name="enter">Enter Name</string>
    <string name="dateMessage">Date will appear here</string>
    <string name="chooseDate">Click here to choose date</string>
</resources>
